--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -153,7 +153,7 @@
 
 .about-master {
     background: url(../images/about-master.jpg) no-repeat top;
-    background-position: -230px 0;
+    background-position: -230px 100px;
     background-size: cover;
     height: 1555px;
 
@@ -206,14 +206,18 @@
 
     &__textbox {
         @include make-xs-column-pull(12);
-        @include make-md-column(8);
-        @include make-md-column-pull(8);
-        background: url(../images/about_master_textbox.png) no-repeat center center;
-        margin: 200px 0 0;
-        padding: 170px 210px;
-        height: 760px;
-        background-size: contain;
+        @include make-md-column(6);
+        @include make-md-column-pull(6);
+        //background: url(../images/about_master_textbox.png) no-repeat center center;
+        //margin: 200px 0 0;
+        //padding: 170px 210px;
+        //height: 760px;
+        //background-size: contain;
         transition: all 500ms cubic-bezier(0.4, 0, 1, 1);
+        background-color: rgba(55, 25, 25, .8);
+        padding: 50px;
+        border-radius: 30px;
+        margin-top: 400px;
 
         @media all and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
             padding: 195px 160px;
@@ -232,7 +236,7 @@
 
         &.scrolled {
             @include make-xs-column-pull(0);
-            @include make-md-column-pull(-4);
+            @include make-md-column-pull(-5);
         }
 
     }
@@ -264,8 +268,10 @@
         font-family: $mainFont;
         font-style: italic;
         color: #fff;
-        margin: 25px 0 20px 60px;
+        //margin: 25px 0 20px 60px;
         position: relative;
+        margin: 25px auto;
+        text-align: center;
 
         @media all and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
             font-size: 26px;
