--- a/styles/main.css
+++ b/styles/main.css
@@ -6271,7 +6271,7 @@ button.close {
 
 .about-master {
   background: url(../images/about-master.jpg) no-repeat top;
-  background-position: -230px 0;
+  background-position: -230px 100px;
   background-size: cover;
   height: 1555px; }
   @media all and (min-width: 992px) and (max-width: 1199px) {
@@ -6391,19 +6391,18 @@ button.close {
     min-height: 1px;
     padding-left: 15px;
     padding-right: 15px;
-    background: url(../images/about_master_textbox.png) no-repeat center center;
-    margin: 200px 0 0;
-    padding: 170px 210px;
-    height: 760px;
-    background-size: contain;
-    transition: all 500ms cubic-bezier(0.4, 0, 1, 1); }
+    transition: all 500ms cubic-bezier(0.4, 0, 1, 1);
+    background-color: rgba(55, 25, 25, 0.8);
+    padding: 50px;
+    border-radius: 30px;
+    margin-top: 400px; }
     @media (min-width: 992px) {
       .about-master__textbox {
         float: left;
-        width: 66.6666666667%; } }
+        width: 50%; } }
     @media (min-width: 992px) {
       .about-master__textbox {
-        right: 66.6666666667%; } }
+        right: 50%; } }
     @media all and (min-width: 992px) and (max-width: 1199px) {
       .about-master__textbox {
         padding: 195px 160px; } }
@@ -6419,7 +6418,7 @@ button.close {
       right: 0%; }
       @media (min-width: 992px) {
         .about-master__textbox.scrolled {
-          right: -33.3333333333%; } }
+          right: -41.6666666667%; } }
   .about-master__text {
     line-height: 34px;
     font-family: Merriweather, serif;
@@ -6457,8 +6456,9 @@ button.close {
     font-family: Merriweather, serif;
     font-style: italic;
     color: #fff;
-    margin: 25px 0 20px 60px;
-    position: relative; }
+    position: relative;
+    margin: 25px auto;
+    text-align: center; }
     @media all and (min-width: 992px) and (max-width: 1199px) {
       .about-master__instagram {
         font-size: 26px; } }
