--- a/styles/main.css
+++ b/styles/main.css
@@ -6478,8 +6478,7 @@ button.close {
       width: 50px;
       height: 50px;
       background: url("../images/main_sprite.png") -550px -511px;
-      position: absolute;
-      left: -60px; }
+      position: absolute; }
       @media all and (min-width: 992px) and (max-width: 1199px) {
         .about-master__instagram::before {
           content: '';
